# llm-playground

./: .gitignore  README.md  pyproject.toml
data/: customer_feedback_eval.csv
demo/: demo_customer_feedback.py  demo_evaluate_customer_feedback.py  demo_ollama__customer_feedback.py  demo_ollama__customer_feedback__compare_models.py  demo_ollama__customer_feedback__evaluate.py  demo_openai__customer_feedback.py
output/: predictions.csv
src/llm_playground/: main.py  scratch.py
src/llm_playground/api/: app.py  models.py
src/llm_playground/customer_feedback/: analyzer.py  models.py  prompts.py
src/llm_playground/evaluation/: customer_feedback.py  models.py
src/llm_playground/llm/: base.py
src/llm_playground/llm/providers/: mock.py  ollama.py  openai.py
tests/: test_analyzer.py  test_sentiments.py  test_topic.py
